# Uni-Mainz-Efficient-Programming

./: .gitignore  README.md
Exercises/: eff-prog-exercises.sln
Exercises/01_lexicalFoundation/: 01_lexicalFoundation.cpp  01_lexicalFoundation.vcxproj  01_lexicalFoundation.vcxproj.filters
Exercises/02_fundatmentalTypes/: 02_fundamentalTypes.cpp  02_fundatmentalTypes.vcxproj  02_fundatmentalTypes.vcxproj.filters
Exercises/03_fundamentalDecimalTypes/: 03_fundamentalDecimalTypes.cpp  03_fundamentalDecimalTypes.vcxproj  03_fundamentalDecimalTypes.vcxproj.filters
Exercises/04_controlStructures_selection/: 04_controlStructures_selection.cpp  04_controlStructures_selection.vcxproj  04_controlStructures_selection.vcxproj.filters
Exercises/05_controlStructures_repetition/: 05_controlStructures_repetition.cpp  05_controlStructures_repetition.vcxproj  05_controlStructures_repetition.vcxproj.filters
Exercises/06_controlStructures_sequence/: 06_controlStructures_sequence.cpp  06_controlStructures_sequence.vcxproj  06_controlStructures_sequence.vcxproj.filters  goto_main.cpp
eff-prog-icp-algo/: CMakeLists.txt
eff-prog-icp-algo/src/: CMakeLists.txt  icp_main.cpp  my_library.cpp  my_library.h
